// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render action buttons on ansible modal render disabled action button when ansible operator isn not installed but there is automation 1`] = `
Array [
  <AcmButton
    isDisabled={true}
    onClick={[MockFunction]}
    variant="primary"
  >
    Save
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="secondary"
  >
    Cancel
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="danger"
  >
    Delete
  </AcmButton>,
]
`;

exports[`render action buttons on ansible modal render no action button for ansible history page 1`] = `Array []`;

exports[`render action buttons on ansible modal render three action buttons with delete button 1`] = `
Array [
  <AcmButton
    isDisabled={false}
    onClick={[MockFunction]}
    variant="primary"
  >
    Save
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="secondary"
  >
    Cancel
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="danger"
  >
    Delete
  </AcmButton>,
]
`;

exports[`render action buttons on ansible modal render three action buttons with disabled delete button with editOnly 1`] = `
Array [
  <AcmButton
    isDisabled={false}
    onClick={[MockFunction]}
    variant="primary"
  >
    Save
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="secondary"
  >
    Cancel
  </AcmButton>,
  <mockTooltip
    content="You are not authorized to complete this action. See your cluster administrator for role-based access information."
    zIndex={10001}
  >
    <div
      className="disable-tooltip"
    >
      <AcmButton
        isDisabled={true}
        variant="danger"
      >
        Delete
      </AcmButton>
    </div>
  </mockTooltip>,
]
`;

exports[`render action buttons on ansible modal render two action buttons without delete button when no policy automation 1`] = `
Array [
  <AcmButton
    isDisabled={false}
    onClick={[MockFunction]}
    variant="primary"
  >
    Save
  </AcmButton>,
  <AcmButton
    onClick={[MockFunction]}
    variant="secondary"
  >
    Cancel
  </AcmButton>,
]
`;
